[package]
name = "driver_base"
version = "0.0.1"
edition = "2021"
# https://codentium.com/guides/windows-dev/

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
thiserror = "1.0"
winreg = "0.10"

[dependencies]


[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
]
